# ParallelProgramming

./: .gitignore  CMakeLists.txt  task1.cpp  task10.cpp  task11.cpp  task12.cpp  task13.cpp  task14.cpp  task15.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp  task9.cpp
mpi/: CMakeLists.txt  task1.cpp  task2.cpp  task2_1.cpp  task2_2.cpp  task2_3.cpp  task2_4.cpp  task2_5.cpp  task3.cpp  task3_1.cpp  task3_2.cpp  task3_3.cpp  task3_4.cpp  task3_5.cpp  task4.cpp  task5.cpp
mpi_2/: CMakeLists.txt  task4_1.cpp  task4_2.cpp  task5_1.cpp  task5_2.cpp  task5_3.cpp
quick_sort/: CMakeLists.txt  quick_sort.cpp
